Bug: Makes news images larger on mobile devices

--- a/css/custom.css
+++ b/css/custom.css
@@ -28,7 +28,7 @@ a.navbar-brand {
   transform: scale(1.02);
 }
 .news-picture {
-  width: 15%;
+  width: 40%;
   padding: 0rem;
 }
 .weather {
